[package]
name = "cats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusty-machine="0.5.4"
rand_distr = "0.4.3"
rand = "0.8.5"
csv = "1.2.1"
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }
structopt = "0.3.26"
gnuplot = "0.0.37"